# uk-planning

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  IMPLEMENTATION_PLAN.md  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml  freshness.yml  pages.yml  stats-ingest.yml
content/: index.md
content/plans/: README.md  (+1 more)
scripts/: build_assets.sh  build_site.py  check_accessibility.py  check_freshness.py  check_links.py  check_metric_drift.py  check_metric_stability.py  ingest_govuk_stats.py  onboard_council.py  serve_local.sh  site_builder.py  validate_data.py
site/: appeals.html  audience-developers.html  audience-lpas.html  audience-policymakers.html  audience-public.html  baselines.html  benchmark.html  bottlenecks.html  compare.html  consultation.html  contradiction-issue-001.html  contradiction-issue-002.html  contradiction-issue-003.html  contradiction-issue-004.html  contradiction-issue-005.html  contradiction-issue-006.html  contradiction-issue-007.html  contradiction-issue-008.html  contradiction-issue-009.html  contradiction-issue-010.html  contradiction-issue-011.html  contradiction-issue-012.html  contradiction-issue-013.html  contradiction-issue-014.html  contradiction-issue-015.html  contradiction-issue-016.html  contradiction-issue-017.html  contradiction-issue-018.html  contradiction-issue-019.html  contradiction-issue-020.html  contradiction-issue-021.html  contradiction-issue-022.html  contradictions.html  coverage.html  data-health.html  exports.html  index.html  legislation.html  map.html  methodology.html  (+54 more)
(+261 files in other folders)
