[project]
name = "uk-planning"
version = "15.0"
requires-python = ">=3.12"
dependencies = ["jinja2>=3.1"]

[project.optional-dependencies]
dev = ["pytest>=9.0", "ruff>=0.4", "pre-commit>=3.0"]

[tool.ruff]
target-version = "py312"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
